Generalize 'TablePath' to 'ResourcePath'